[gd_scene load_steps=23 format=3 uid="uid://dmwiwjcccolb3"]

[ext_resource type="Script" path="res://scenes/Enemies/boss_snow_man.gd" id="1_ib5s5"]
[ext_resource type="PackedScene" uid="uid://bgehfpwlaunvl" path="res://scenes/components/spawner_component.tscn" id="2_jq2kl"]
[ext_resource type="Script" path="res://scripts/Damage.gd" id="2_sthgw"]
[ext_resource type="PackedScene" uid="uid://orqq154lnhqm" path="res://scenes/death_particles.tscn" id="3_b8lkx"]
[ext_resource type="PackedScene" uid="uid://c34cc3hoyt8sc" path="res://scenes/floating_text_3d.tscn" id="4_8gaqh"]
[ext_resource type="PackedScene" uid="uid://d3recwm5ur062" path="res://scenes/components/health_component.tscn" id="5_opdxs"]
[ext_resource type="PackedScene" uid="uid://cfftep6odpudu" path="res://scenes/objects/progress_bar.tscn" id="6_jd1g4"]
[ext_resource type="PackedScene" uid="uid://ccumghcbbaw4a" path="res://scenes/components/hit_box_component.tscn" id="7_orubc"]
[ext_resource type="PackedScene" uid="uid://yyi4nmski8oe" path="res://scenes/blizzard.tscn" id="8_jo7dy"]
[ext_resource type="PackedScene" uid="uid://ckhyl87e8uuc6" path="res://ready/gift.tscn" id="9_bofne"]
[ext_resource type="AudioStream" uid="uid://eccycxyng740" path="res://assets/sounds/+1.mp3" id="10_g63qc"]
[ext_resource type="AudioStream" uid="uid://cdrpl57m36un4" path="res://assets/sounds/+1 multiplier.mp3" id="11_yt6wc"]

[sub_resource type="Resource" id="Resource_atwgj"]
script = ExtResource("2_sthgw")
damage = 20
penetration = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_tcg48"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j8avl"]
albedo_color = Color(0.219608, 0.219608, 0.219608, 1)
emission_enabled = true
emission_energy_multiplier = 16.0
emission_operator = 1

[sub_resource type="CylinderMesh" id="CylinderMesh_214xm"]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uph77"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ym7gj"]
radius = 0.617416
height = 2.27718

[sub_resource type="Animation" id="Animation_55hkr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.332081, 0.534116, 0.330835)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/RightHand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3.13185e-08, -1.32182e-08, 0.79875)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.332081, 0.534116, -0.36295)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/LeftHand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.95152e-08, -1.14695e-08, 0.741276)]
}

[sub_resource type="Animation" id="Animation_001io"]
resource_name = "grab"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.332081, 0.534116, 0.330835), Vector3(0.346954, 0.593514, 0.592169), Vector3(0.361828, 0.652911, 0.246565), Vector3(0.332081, 0.534116, 0.330835)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/RightHand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-3.13185e-08, -1.32182e-08, 0.79875), Vector3(9.08033e-08, -0.861189, 0.944947), Vector3(-2.50259e-08, 0.498204, 1.09114), Vector3(-3.13185e-08, -1.32182e-08, 0.79875)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.332081, 0.534116, -0.36295), Vector3(0.305766, 0.583664, -0.525311), Vector3(0.332081, 0.625328, -0.300538), Vector3(0.332081, 0.534116, -0.36295)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/LeftHand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-2.95152e-08, -1.14695e-08, 0.741276), Vector3(-3.80166e-08, 0.506957, 0.972323), Vector3(-3.38406e-08, -0.37638, 1.20337), Vector3(-2.95152e-08, -1.14695e-08, 0.741276)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_227i7"]
_data = {
"RESET": SubResource("Animation_55hkr"),
"attack": SubResource("Animation_001io")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_j6mg2"]
size = Vector3(1.24536, 1, 1.06885)

[node name="BossSnowMan" type="CharacterBody3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 4
collision_mask = 7
script = ExtResource("1_ib5s5")
damage = SubResource("Resource_atwgj")

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Bottom" type="MeshInstance3D" parent="Body"]
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="Middle" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.72423, 0)
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="Head" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.21429, 0)
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="RightEye" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.209641, 1.32633, 0.0812237)
material_override = SubResource("StandardMaterial3D_j8avl")
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="LeftEye" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.209641, 1.32633, -0.120979)
material_override = SubResource("StandardMaterial3D_j8avl")
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="LeftHand" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.737607, -0.67523, -1.14695e-08, 0.67523, 0.737607, 2.95152e-08, -1.14695e-08, -2.95152e-08, 1, 0.332081, 0.534116, -0.36295)
mesh = SubResource("CylinderMesh_214xm")

[node name="RightHand" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.697603, -0.716484, -1.32182e-08, 0.716484, 0.697603, 3.13185e-08, -1.32182e-08, -3.13185e-08, 1, 0.332081, 0.534116, 0.330835)
mesh = SubResource("CylinderMesh_214xm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.471435, 0)
shape = SubResource("CapsuleShape3D_uph77")

[node name="DeathSpawnerComponent" parent="." instance=ExtResource("2_jq2kl")]
scene = ExtResource("3_b8lkx")

[node name="DamageLabelSpawnerComponent" parent="." instance=ExtResource("2_jq2kl")]
scene = ExtResource("4_8gaqh")

[node name="HealthComponent" parent="." instance=ExtResource("5_opdxs")]

[node name="OverHead" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69634, 0)

[node name="ProgressBar" parent="OverHead" instance=ExtResource("6_jd1g4")]
size = Vector3(2, 0.3, 0.1)

[node name="GiftPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.507198, -0.694776)

[node name="HitBoxComponent" parent="." instance=ExtResource("7_orubc")]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBoxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.472336, 0)
shape = SubResource("CapsuleShape3D_ym7gj")

[node name="Blizzard" parent="." instance=ExtResource("8_jo7dy")]
emitting = false

[node name="GiftSpawnerComponent" parent="." instance=ExtResource("2_jq2kl")]
scene = ExtResource("9_bofne")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 2.5
path_height_offset = 0.1
avoidance_enabled = true
radius = 0.4

[node name="AudioGrabbed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_g63qc")

[node name="AudioPut" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_yt6wc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_227i7")
}

[node name="CheckPlayer" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.545877, -0.994517)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CheckPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0220947, 0, -0.0344238)
shape = SubResource("BoxShape3D_j6mg2")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="hit" from="HitBoxComponent" to="." method="_on_hit_box_component_hit"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
